# danmuji

./: .build.yml  .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  config.go  core  danmuji-alpine.nix  docker-compose.yml  main.go  queries.md  ratio.sql  result  rustfmt.toml  seed.sql  test.sql  todo.md  utils.go
app/: config.go  main.go
docker/: Dockerfile  Dockerfile-alpine-rust  Dockerfile-slim-rust-diesel
handlers/: db_handler.go  ready_handler.go
migrations/2019-06-23-153829_create_users/: up.sql
migrations/2019-06-23-161548_create_guilds/: up.sql
migrations/2019-06-23-161909_create_channels/: up.sql
migrations/2019-06-23-162329_create_roles/: up.sql
migrations/2019-06-23-162618_create_messages/: up.sql
migrations/2019-07-10-021539_add_relational_tables/: down.sql  up.sql
migrations/2019-07-19-033518_create_replies/: up.sql
migrations/2019-08-02-013411_create_guild_column_for_replies/: down.sql  up.sql
migrations/2019-08-30-055219_add_content_to_messages/: down.sql  up.sql
migrations/2019-09-21-161755_remove_content_from_messages/: up.sql
migrations/2019-09-21-164734_create_roles_table/: up.sql
sql/: leaderboard-local.sql  leaderboard.sql  ratio-local.sql  ratio.sql  seed.sql
src/: checks.rs  db.rs  dispatch.rs  errors.rs  handler.rs  main.rs  models.rs  schema.rs  tasks.rs  utils.rs
src/commands/: channels.rs  general.rs  groups.rs  hangeul.rs  hanja.rs  mod.rs  reminders.rs  replies.rs  roles.rs
src/handlers/: events.rs
src/models/: channel.rs  guild.rs  leaderboard.rs  message.rs  mod.rs  ratio.rs  reply.rs  role.rs  user.rs
src/utils/: discord.rs  general.rs  hangeul.rs  mod.rs
util/: errs.go
