[package]
name = "danmuji"
version = "0.1.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"
build = false
description = "A discord bot written in Rust."
license = "GPL-3.0-only"

[[bin]]
name = "danmuji"
path = "src/main.rs"

[dependencies]
chrono = "0.4.7"
diesel = { version = "1.4", features = ["chrono", "r2d2", "postgres"] }
diesel_migrations = "1.4"
dotenv = "0.14.1"
env_logger = "0.6"
hey_listen = "0.4"
lazy_static = "1.3"
log = "0.4"
pretty_assertions = "0.6.1"
rayon = "1.1"
r2d2 = "0.8.5"
regex = "1"
serenity = { version = "0.6", features = ["reqwest", "http"] }
serde_json = "1.0.40"
white_rabbit = "0.1.1"
