[package]
name = "danmuji"
version = "0.3.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"
build = false
description = "A discord bot written in Rust."
license = "GPL-3.0-only"

[[bin]]
name = "danmuji"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "r2d2", "postgres"] }
diesel_migrations = "1.4"
dotenv = "0.14.1"
env_logger = "0.6"
hangeul = "0.2.0"
hey_listen = "0.4"
itertools = "0.8.0"
lazy_static = "1.4"
log = "0.4"
pretty_assertions = "0.6.1"
r2d2 = "0.8.5"
rayon = "1.2"
regex = "1.3"
serde_json = "1.0.40"
serenity = { version = "0.7", features = ["reqwest", "http"] }
strfmt = "0.1.6"
white_rabbit = "0.1.1"

[dev-dependencies]
mockall = "0.4.0"
